--- a/common.zh_TW.po
+++ b/common.zh_TW.po
@@ -30,7 +30,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-12 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: 黃柏諺 <s8321414@gmail.com>, 2015\n"
+"Last-Translator: 韬 刘 <jiegushijia@gmail.com>, 2019\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/team-xonotic/"
 "xonotic/language/zh_TW/)\n"
 "Language: zh_TW\n"
@@ -1559,16 +1559,16 @@ msgstr "生命數："
 
 #: qcsrc/common/gamemodes/gamemode/mayhem/mayhem.qh:10
 msgid "Compete for the most damage dealt and frags in this chaotic mayhem!"
-msgstr ""
+msgstr "在這場混亂中爭鬥，造成儘可能多的傷害！"
 
 #: qcsrc/common/gamemodes/gamemode/mayhem/mayhem.qh:10
 msgid "Mayhem"
-msgstr ""
+msgstr "大亂鬥"
 
 #: qcsrc/common/gamemodes/gamemode/mayhem/mayhem.qh:31
 #: qcsrc/common/gamemodes/gamemode/tmayhem/tmayhem.qh:46
 msgid "How much score is needed before the match will end"
-msgstr ""
+msgstr "分數達到目標後，一輪競賽結束"
 
 #: qcsrc/common/gamemodes/gamemode/nexball/nexball.qh:11
 msgid "Nexball"
@@ -1630,11 +1630,11 @@ msgstr "團隊死亡競技"
 msgid ""
 "Compete with your team for the most damage dealt and frags in this chaotic "
 "mayhem!"
-msgstr ""
+msgstr "在這場混亂中與隊友合作爭鬥，造成儘可能多的傷害！"
 
 #: qcsrc/common/gamemodes/gamemode/tmayhem/tmayhem.qh:10
 msgid "Team Mayhem"
-msgstr ""
+msgstr "團隊大亂鬥"
 
 #: qcsrc/common/items/item/ammo.qh:56
 msgid "Shells"
@@ -9998,7 +9998,7 @@ msgstr "快速選單"
 
 #: qcsrc/menu/xonotic/keybinder.qc:126
 msgid "scoreboard user interface"
-msgstr ""
+msgstr "記分板用家介面"
 
 #: qcsrc/menu/xonotic/keybinder.qc:129
 msgid "User defined"
