--- a/common.zh_HK.po
+++ b/common.zh_HK.po
@@ -6510,7 +6510,7 @@ msgstr "包括垂直速度"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_physics.qc:49
 msgid "Show speed unit"
-msgstr ""
+msgstr "顯示速度單位"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_physics.qc:52
 msgid "Top speed"
