--- a/common.la.po
+++ b/common.la.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-09 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: oblector o, 2022\n"
+"Last-Translator: oblector o, 2022-2023\n"
 "Language-Team: Latin (http://app.transifex.com/team-xonotic/xonotic/language/"
 "la/)\n"
 "Language: la\n"
@@ -902,37 +902,45 @@ msgstr "Si rationarium mutare vis, ^2scoreboard_columns_set iubeto."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:685
 msgid "Usage:"
-msgstr ""
+msgstr "Usus:"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:687
 msgid "^2scoreboard_columns_set ^3field1 field2 ..."
-msgstr ""
+msgstr "^2scoreboard_columns_set ^3columna1 columna2 ..."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:688
 msgid ""
 "^2scoreboard_columns_set ^7without arguments reads the arguments from the "
 "cvar scoreboard_columns"
 msgstr ""
+"^2scoreboard_columns_set ^7si non sunt argumenta, columnas legit ex "
+"variabili scoreboard_columns"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:689
 msgid ""
 "  ^5Note: ^7scoreboard_columns_set without arguments is executed on every "
 "map start"
 msgstr ""
+"  ^5Nota: ^7scoreboard_columns_set si non sunt argumenta, iubetur semper cum "
+"ludus incipit"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:690
 msgid ""
 "^2scoreboard_columns_set ^3expand_default ^7loads default layout and expands "
 "it into the cvar scoreboard_columns so you can edit it"
 msgstr ""
+"^2scoreboard_columns_set ^3expand_default ^7rationarii formam ordinariam in "
+"variabili scoreboard_columns scribit ut legas et transcribas id quod vellis"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:691
 msgid "You can use a ^3|^7 to start the right-aligned fields."
-msgstr ""
+msgstr "Signum ^3|^7 scribe ut ad columnae latus dextrum res scribantur."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:692
 msgid "The following field names are recognized (case insensitive):"
 msgstr ""
+"Noscuntur columnarum nomina quae sequuntur (litteras parvas vel magnas "
+"scribere potes):"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:698
 msgid ""
@@ -941,28 +949,38 @@ msgid ""
 "or in all but these game types. You can also specify 'all' as a\n"
 "field to show all fields available for the current game mode."
 msgstr ""
+"Ante columnae nomen scribere potes signum + vel -, etiam sequentes\n"
+"ludorum modorum nomina, signa commata interposita, denique lineam /,\n"
+"ut columna scribatur solum cum inter ea nomina ludi modus sit, vel\n"
+"cum inter ea non sit. Atque 'all' scribere potes ut omnes ludi modi\n"
+"columnas videas."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:704
 msgid ""
 "The special game type names 'teams' and 'noteams' can be used to\n"
 "include/exclude ALL teams/noteams game modes."
-msgstr ""
+msgstr "Nomen 'teams' manuum modis est, et nomen 'noteams' aliis modis."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:708
 msgid "Example: scoreboard_columns_set name ping pl | +ctf/field3 -dm/field4"
 msgstr ""
+"Exemplum: scoreboard_columns_set name ping pl | +ctf/columna3 -dm/columna4"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:709
 msgid ""
 "will display name, ping and pl aligned to the left, and the fields\n"
 "right of the vertical bar aligned to the right."
 msgstr ""
+"nomen, ping et PL ad latus sinistrum scribuntur, et aliae ad latus\n"
+"dextrum scribuntur."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:711
 msgid ""
 "'field3' will only be shown in CTF, and 'field4' will be shown in all\n"
 "other gamemodes except DM."
 msgstr ""
+"'columna3' modo Vexilli Captu 'ctf' videbitur, et 'columna4' omni\n"
+"modo praeter Interfectionem 'dm' videbitur."
 
 #: qcsrc/client/hud/panel/scoreboard.qc:990
 #: qcsrc/client/hud/panel/scoreboard.qc:997
@@ -1348,15 +1366,15 @@ msgstr "%d secunda manentia"
 
 #: qcsrc/client/mapvoting.qc:558
 msgid "mv_mapdownload: ^3You're not supposed to use this command on your own!"
-msgstr ""
+msgstr "mv_mapdownload: ^3Non decet temet ipsum hunc iubere!"
 
 #: qcsrc/client/mapvoting.qc:568
 msgid "^1Error:^7 Couldn't find pak index."
-msgstr ""
+msgstr "^1Defuit:^7 Index Pak inventus non est."
 
 #: qcsrc/client/mapvoting.qc:577
 msgid "Requesting preview..."
-msgstr ""
+msgstr "Pictura poscitur..."
 
 #: qcsrc/client/view.qc:883
 msgid "Nade timer"
@@ -1372,7 +1390,7 @@ msgstr "Tempus ad restitutionem"
 
 #: qcsrc/common/command/generic.qc:156
 msgid "error creating curl handle"
-msgstr ""
+msgstr "defuit in creatione curl handle"
 
 #: qcsrc/common/gamemodes/gamemode/assault/assault.qh:8
 msgid "Assault"
